--- a/frontend/spellcheckerfront/src/App.css
+++ b/frontend/spellcheckerfront/src/App.css
@@ -1,23 +1,17 @@
 .App {
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  
+  color: white;
+  background-color: #282c34;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 60vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -35,4 +29,72 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+ul.demo {
+  border-color: black;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color: #282c34;
+}
+
+li.demo {
+  border-color: black;
+  margin: 0;
+  padding: 0;
+  background-color: #282c34;
+}
+
+p.demo {
+  
+  font-size: calc(8px + 2vmin);
+  border-color: black;
+  background-color: #282c34;
+}
+
+[class*="row-"] {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+[class*="col-"] {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.button {
+  background-color:darkslategrey; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-style: solid;
+  border-color: black;
+  border-radius: 10px;
+  border-width: 2px;
+}
+
+.button:hover {
+  background-color: black; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
 }
